syntax = "proto3";

package tracker;

option go_package = "jobmate/tracker-service/internal/pb;pb";

import "google/protobuf/timestamp.proto";

// ─────────────────────────────────────────────────────────────────────────────
// TrackerService — Kanban CRM for job applications
//
// All RPCs require the caller to pass the authenticated user's ID via gRPC
// metadata key "x-user-id". The Gateway injects this after JWT validation.
// ─────────────────────────────────────────────────────────────────────────────
service TrackerService {
  // List all applications for the authenticated user.
  // Optional status_filter narrows to a single Kanban column.
  rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse);

  // Fetch a single application by ID. Ownership is verified.
  rpc GetApplication(GetApplicationRequest) returns (ApplicationProto);

  // Create a new application from an approved job_feed entry.
  // Publishes CMD_ANALYZE_JOB to Redis after creation.
  rpc CreateApplication(CreateApplicationRequest) returns (ApplicationProto);

  // Move a Kanban card to a new status (state machine validated).
  // On HIRED: archives the parent search_config (sets is_active=false, completed_at=NOW()).
  rpc MoveCard(MoveCardRequest) returns (ApplicationProto);

  // Add or replace the free-text note on an application.
  rpc AddNote(AddNoteRequest) returns (ApplicationProto);

  // Set a 1–5 star rating on an application.
  rpc RateApplication(RateApplicationRequest) returns (ApplicationProto);

  // Set or clear a relance reminder timestamp.
  rpc SetRelanceReminder(SetRelanceReminderRequest) returns (ApplicationProto);
}

// ─────────────────────────────────────────────────────────────────────────────
// Requests
// ─────────────────────────────────────────────────────────────────────────────

message ListApplicationsRequest {
  // When non-empty, filters results to this Kanban column only.
  // Valid values: TO_APPLY, APPLIED, INTERVIEW, OFFER, REJECTED, HIRED
  string status_filter = 1;
}

message GetApplicationRequest {
  string application_id = 1;
}

message CreateApplicationRequest {
  // The approved job_feed entry to create an application for.
  string job_feed_id = 1;
}

message MoveCardRequest {
  string application_id = 1;
  // Target status — must be a valid ApplicationStatus string.
  // Valid values: TO_APPLY, APPLIED, INTERVIEW, OFFER, REJECTED, HIRED
  string new_status = 2;
}

message AddNoteRequest {
  string application_id = 1;
  string note           = 2;
}

message RateApplicationRequest {
  string application_id = 1;
  int32  rating         = 2; // 1–5
}

message SetRelanceReminderRequest {
  string application_id = 1;
  // ISO 8601 timestamp string. Empty string = clear the reminder.
  string remind_at = 2;
}

// ─────────────────────────────────────────────────────────────────────────────
// Responses
// ─────────────────────────────────────────────────────────────────────────────

message ListApplicationsResponse {
  repeated ApplicationProto applications = 1;
}

// ApplicationProto mirrors the Applications table row returned to clients.
// JSON blobs (ai_analysis, history_log) are carried as raw bytes so the
// Gateway can forward them to the frontend without an extra parse/marshal cycle.
message ApplicationProto {
  string id             = 1;
  string current_status = 2;

  // Raw JSON bytes — forwarded as-is to GraphQL clients.
  bytes ai_analysis = 3;
  bytes history_log = 7;

  // Nullable string fields (empty string = NULL in DB)
  string generated_cover_letter = 4;
  string user_notes             = 5;

  // Nullable int32 — 0 means unrated
  int32 user_rating = 6;

  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;

  // Relational context — used by Gateway for archiveSearchConfig + UI deep links
  string job_feed_id      = 10; // empty if job_feed was deleted
  string search_config_id = 11; // derived via job_feed.search_config_id (empty if manual/deleted)

  // Relance reminder — empty string = not set
  string relance_reminder_at = 12;
}
